<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/step_one"
            android:icon="@drawable/baseline_filter_1_24"
            android:title="@string/menu_step_one" />
        <item
            android:id="@+id/step_two"
            android:icon="@drawable/baseline_filter_2_24"
            android:title="@string/menu_step_two" />
        <item
            android:id="@+id/step_three"
            android:icon="@drawable/baseline_filter_3_24"
            android:title="@string/menu_step_three" />
        <item
            android:id="@+id/step_four"
            android:icon="@drawable/baseline_filter_4_24"
            android:title="@string/menu_step_four" />
        <item
            android:id="@+id/step_five"
            android:icon="@drawable/baseline_filter_5_24"
            android:title="@string/menu_step_five" />
        <item
            android:id="@+id/step_six"
            android:icon="@drawable/baseline_filter_6_24"
            android:title="@string/menu_step_six" />
        <item
            android:id="@+id/step_seven"
            android:icon="@drawable/baseline_filter_7_24"
            android:title="@string/menu_step_seven" />
        <item
            android:id="@+id/step_eight"
            android:icon="@drawable/baseline_filter_8_24"
            android:title="@string/menu_step_eight" />
        <item
            android:id="@+id/step_nine"
            android:icon="@drawable/baseline_filter_9_24"
            android:title="@string/menu_step_nine" />

    </group>
</menu>